--- a/abc.html
+++ b/abc.html
@@ -2,13 +2,13 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ABC just easy as 1,2,3</title>
       <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
   <body>
-<a class="goback" href="welcome.html">Retour</a>
+<a class="goback" href="index.html">Retour</a>
 
     <h1>Abecedaire des couleurs</h1> <div>
 <nav class="btn-holder">
