--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Bienvenue
       </h1>
       <p>Venez découvrir un abécédaire des couleurs</p>
-      <div class="btn panel">  <span><a  href="index.html">Découvir</a></span> </div>
+      <div class="btn panel">  <span><a  href="abc.html">Découvir</a></span> </div>
 
       <div class="circle">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1001.08 1001.08"><defs><style>.cls-1{fill:#f2b01c;}.cls-2{fill:#e26938;}.cls-3{fill:#c83188;}.cls-4{fill:#11040d;}.cls-5{fill:#58173d;}</style>
