--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Welcome ! </title>
     <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/masterwelcome.css">
+
   </head>
   <body>
     <div class="home--page">
@@ -12,8 +13,8 @@
       Bienvenue
       </h1>
       <p>Venez découvrir un abécédaire des couleurs</p>
-      <div class="btn panel">  <span><a  href="abc.html">Découvir</a></span> </div>
-
+      <div class="btn panel" href="abc.html">  <span><a  href="abc.html">Découvir</a></span> </div>
+</div>
       <div class="circle">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1001.08 1001.08"><defs><style>.cls-1{fill:#f2b01c;}.cls-2{fill:#e26938;}.cls-3{fill:#c83188;}.cls-4{fill:#11040d;}.cls-5{fill:#58173d;}</style>
         </defs>
@@ -23,6 +24,6 @@
         <g id="cercle4"><circle class="cls-4" cx="500.54" cy="500.54" r="208.35"/></g>
         <g id="cercle5"><circle class="cls-5" cx="500.54" cy="500.54" r="99.16"/></g></svg>
       </div>
-      </div>
+
   </body>
 </html>
