--- a/abc.html
+++ b/abc.html
@@ -160,9 +160,10 @@
   <h2>Z</h2>
     <p>zinolin</p>
   </div>
-<footer>
-
-</footer>
+</section>
   </body>
-  <script type="text/javascript" src="monoscript.js"></script>
+  <footer>
+
+  </footer>
+  <script type="text/javascript" src="js/script.js"></script>
 </html>
