--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
       Bienvenue
       </h1>
       <p>Quelles aient des noms de fleurs, de fruits, de pierres ou autre,<br> les couleurs nous entourent tout les jours.</p><p>Venez découvrir un abécédaire des couleurs.</p>
-      <div class="btn panel" href="abc.html">  <span href="abc.html"><a  href="abc.html">Découvir</a></span> </div>
+      <div class="btn panel" href="abc.html"> <a  href="abc.html">Découvir</a> </div>
 </div>
       <div class="circle">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1001.08 1001.08"><defs><style>.cls-1{fill:#f2b01c;}.cls-2{fill:#e26938;}.cls-3{fill:#c83188;}.cls-4{fill:#11040d;}.cls-5{fill:#58173d;}</style>
         </defs>
-        <g id="cercle1"><circle class="cls-1" cx="500.54" cy="500.54" r="500.54"/></g>
-        <g id="cercle2"><circle class="cls-2" cx="500.54" cy="500.54" r="400.43"/></g>
-        <g id="cercle3"><circle class="cls-3" cx="500.54" cy="500.54" r="303.16"/></g>
-        <g id="cercle4"><circle class="cls-4" cx="500.54" cy="500.54" r="208.35"/></g>
-        <g id="cercle5"><circle class="cls-5" cx="500.54" cy="500.54" r="99.16"/></g></svg>
+      <circle class="cls-1" cx="500.54" cy="500.54" r="500.54"/>
+      <circle class="cls-2" cx="500.54" cy="500.54" r="400.43"/>
+      <circle class="cls-3" cx="500.54" cy="500.54" r="303.16"/>
+      <circle class="cls-4" cx="500.54" cy="500.54" r="208.35"/>
+      <circle class="cls-5" cx="500.54" cy="500.54" r="99.16"/>
+    </svg>
       </div>
 
   </body>
