--- a/abc.html
+++ b/abc.html
@@ -72,6 +72,7 @@
   <div class="basic-box consonant">
       <h2>G</h2>
       <p>gris souris</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 258.98 118.86"><defs><style>.draw{{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="cls-1" d="M18.11,54c-21.1-.7-22.67-6.19-7.77-6.58S49.55,49,60.13,60.39,76.21,95.28,81.7,94.1s12.93-2,13.33-8.62S96.2,57.64,108,50.19,124.82,30.59,135,26.67s27.83-1.18,35.28,2,7.53-.6,7.53-.6,2.87,5.74,6.22,5.5,6-.24,7.65.71,2.5,6,5.5,2.08S202.81,27,200,24.16s-4.3-1.31-5.8-4.68-10.28-9-13.65-5.42-4.45,5.88-4.3,7.43-.62,2.32-1.39.62-1.09-9.3,5.11-10.69,12.08,1.7,14.56,3.1,4.5.46,5.12-.47-2.17-1.55-1.71-3.56S193,2.74,195,1.35s5.58-1.09,8.52,1.08,5.42,6.82,5.27,7.9-7,.47-6.2,2,8.68.93,11.16.62,9.34,6.83,7.67,8.22-5.67,6.64-3.18,8.58,5.95,2.21,8.44-.7,3.74-3.18,1.94-4.56a16,16,0,0,0-4.29-2.63c-1-.28-1.24-6.92-4-8.44s6.5-.14,8.58.69,10.37,5.4,13.28,5.67,7.33,2.91,10.1,2.77,6.92,2.77,6.09,5.81-2.08,3.6-3,2.49-2.91-.13-1.53.56,4.43,1.1,2.08,4.84-7.2,7.06-9.13,7.61.69,1.52-3.32,3.74-18.82,6.78-21.31,8.16-6.41,13.15-5.37,20.73,4.44,16.72,9.41,18.29,5.49,11,9.41,10.72,17,1,14.9,2.09-7.32,2.61-9.41,2.35.78,1.83-1.83,2.35-6.54-1.3-8.89-1.3a6.1,6.1,0,0,1-6.27-3.92c-1.57-3.4-30.58-10.72-33.19-10.72s-1.61,7.83.29,8.21,3.53,1.77,7.7.88,9.22,2.65,8.46,3.79-1.64,2.15-3.41,1.52-2.4,1.26-4.42,1.26-8.71-.63-10.48-.63-2.65,1.51-4,.38-9.47-10.23-6.19-10.74,13-4,8.59-3.53-19.58,5.17-25.51,9.47-2.24,4.43-3,6-2.42,4.83-6.83,4.69a33.73,33.73,0,0,1-9.38-1.42c-.57,1.7-1.85,2.42-3.27,2s-2-2.42-5.55-2.42-11.38.14-15.07-1.56a27.08,27.08,0,0,1-14.93-2.11c-7.39-3.49-7.8-8.21-15.61-7.59s-16.63-.62-19.1-8.63-8-39.22-36.35-41.07a74.28,74.28,0,0,1-9.65-.41"/></svg>
       </div>
   <div class="basic-box consonant">
       <h2>H</h2>
@@ -79,7 +80,7 @@
       </div>
   <div class="basic-box vowel">
       <h2>I</h2>
-      <p>incarnadin</p>
+      <p>ivoire</p>
       </div>
   <div class="basic-box consonant">
       <h2>J</h2>
@@ -88,6 +89,7 @@
   <div class="basic-box consonant">
       <h2>K</h2>
       <p>klein</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 366.7 195.82"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="cls-1" d="M11.12,86.29c-8.25,37.12-8.84,54.79,2.35,38.3S52.94,56.84,55.89,51.53,1.1,179.38.51,193.51s21.21-58.91,40.06-76.58c-7.07,19.44-6.48,31.22-.59,28.87s20-24.16,13-24.16-4.1,2.73-2.12,2.13,1.79,8.53,5.75,7.94,14.18-9.42,14.87-12.4-6.44,1.59-3.37,9.22S94.77,113,98.62,109.11,113.73,86,108.1,88.23s-14.84,12.36-13.33,29.53-1,17.86-2.74,17,13.32-14.83,21.84-23.35,65.07-88,65.07-88S129.89,137.89,128.62,138.1s-8.71-10.83,27-43.53S247.53.5,247.53.5s-84.72,73.69-83.24,78.78,51.39,42.9,58.19,41.62,8.28-26.12,13.37-31.43,41-36.31,40.35-43.74-29.09,5.52-36.74,32.49-8.7,35.46.85,33.55,27.51-18.5,29.44-24.31-10.32,6.13-2.58,10,25.48-12.26,29-11.29,1.61,9,7.74,7.74S318.14,81.66,322,82.62s6.45,7.74,44.19-6.77"/></svg>
       </div>
   <div class="basic-box consonant">
       <h2>L</h2>
@@ -131,7 +133,7 @@
       </div>
   <div class="basic-box consonant">
       <h2>V</h2>
-        <p>vert</p>
+        <p>vert sauge</p>
       </div>
   <div class="basic-box consonant">
       <h2>W</h2>
