--- a/lettera.html
+++ b/lettera.html
@@ -21,7 +21,8 @@
     <div class="main--content">
   <div class="lettre">
     <h1>A</h1>
-    <p>"abricot", "d'abricot" (invariable)<br>
+    <p>#e67e30<br>
+      "abricot", "d'abricot" (invariable)<br>
 <i>de l'arabe al-barqoûq, "le fruit précoce"</i><br>
 De la couleur de la peau d'un abricot, d'un orange doux et légèrement rosé.</p>
     </div>
