--- a/letterc.html
+++ b/letterc.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1 class="light">C</h1>
-    <p class="light">La cerise est le fruit comestible du cerisier. Rouge vif à profond, couleur de la cerise commune arrivée à maturité.
+    <p class="light">#c2022f<br>La cerise est le fruit comestible du cerisier. Rouge vif à profond, couleur de la cerise commune arrivée à maturité.
 Désigne également une certaine couleur lors du chauffage de métaux en ferronnerie.</p>
     </div>
     <div class="illu">
