--- a/lettere.html
+++ b/lettere.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1 class="light">E</h1>
-    <p class="light">Vert intense, pouvant être légèrement laiteux, voire bleuté. Couleur de la pierre du même nom.</p>
+    <p class="light">#1d7583<br>L'émeraude est un vert intense, pouvant être légèrement laiteux, voire bleuté. Couleur de la pierre du même nom.</p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.67 189.77"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1px;}</style></defs><path class="draw" d="M161.08,189.27.5,76.64,5.07,56.85,75.84,8.15S140.53,1.3,172.49.54s79.15,9.89,79.15,9.89l67.73,48.71,3.8,13.7L175.53,181.66l95.13-85.23,30.25-10.24-10.24-42.8-7,3.72L247.4,20.59l.46-8.38-12.09,3.72-66.54,2.8,58.63,26.52,5.58-25.13.47,27,61.41,32.57L247.86,95,226.93,48.5l-56.3,48.39L109.21,44.78l54.44-24.66-40.48-3.25,3.72,14-9.77-14.89-23.73-.46-14-4.65L51.52,29l34-9.77,10.7.47L106,42.46,34.77,82,5,71.77,27.79,83.4,85,93.64,105,48.5,89.2,94.1l68.87,2.79,63.27,1.86,20.47,3.73-65.6,74.91-10.7,8.84L146,170.87l23.26-68.39-78.16-1.87,50.71,63.75L32,91.31"/></svg>
