--- a/letterf.html
+++ b/letterf.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1 class="light">F</h1>
-    <p class="light">Ocre orangé à roux ou tirant sur le roux.
+    <p class="light">#8c440d<br>Le fauvre est un ocre orangé à roux ou tirant sur le roux.
 À noter que la couleur est bien le sens premier de ce mot. Ce n'est qu'ensuite qu'il a servi à désigner des animaux au pelage de cette couleur, puis plus spécifiquement les grands félins sauvages.</p>
     </div>
     <div class="illu">
