--- a/letterk.html
+++ b/letterk.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1 class="light">K</h1>
-    <p class="light">Sorte de bleu outremer profond. Couleur "déposée" par l'artiste Yves Klein, sous le nom IKB pour "International Klein Blue".</p>
+    <p class="light">#21177d<br>Le bleu Klein sorte de bleu outremer profond. Couleur "déposée" par l'artiste Yves Klein, sous le nom IKB pour "International Klein Blue".</p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 366.7 195.82"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M11.12,86.29c-8.25,37.12-8.84,54.79,2.35,38.3S52.94,56.84,55.89,51.53,1.1,179.38.51,193.51s21.21-58.91,40.06-76.58c-7.07,19.44-6.48,31.22-.59,28.87s20-24.16,13-24.16-4.1,2.73-2.12,2.13,1.79,8.53,5.75,7.94,14.18-9.42,14.87-12.4-6.44,1.59-3.37,9.22S94.77,113,98.62,109.11,113.73,86,108.1,88.23s-14.84,12.36-13.33,29.53-1,17.86-2.74,17,13.32-14.83,21.84-23.35,65.07-88,65.07-88S129.89,137.89,128.62,138.1s-8.71-10.83,27-43.53S247.53.5,247.53.5s-84.72,73.69-83.24,78.78,51.39,42.9,58.19,41.62,8.28-26.12,13.37-31.43,41-36.31,40.35-43.74-29.09,5.52-36.74,32.49-8.7,35.46.85,33.55,27.51-18.5,29.44-24.31-10.32,6.13-2.58,10,25.48-12.26,29-11.29,1.61,9,7.74,7.74S318.14,81.66,322,82.62s6.45,7.74,44.19-6.77"/></svg>
