--- a/letterl.html
+++ b/letterl.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1>L</h1>
-    <p>Mauve violacé clair. Couleur des fleurs mauves du lilas.</p>
+    <p>#b666d2<br>Le lilas est un mauve violacé clair. Couleur des fleurs mauves du lilas.</p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 211.89 160.08"><defs><style>.lilas{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="lilas" d="M52.23,119.48c-7.84,20.49-20,24.41-33.56,19.62S-.95,134.74.79,127.33s5.67-32.26,18.75-34C11.25,90.71,2.1,78.94,10.38,67.16S44,67.6,50.05,72.4s11.78,4.36,14.83,0,4.79,6.1,12.2,6.54S98.88,88.53,95,100.73s-7.41,14.39-6.54,17.88-2.18,2.61-5.67.43c7,21.37,7,29.21,3.49,33.14s-9.16,9.59-17.44,6.54-17.44-14-15.26-28.34S60.87,99,67.23,95.69c0,0,25.39-13.67,27.54-19.91s.58-16.57,4.48-20.08S116,42.83,132.4,50.82c2.34,1.37,5.27-.19,1.17-1.36s-16-5.27-16.77-20.67S116,.12,121.87.51s7.41.78,11.31.39,9.17-1.56,17.95,4.87S163.8,13.57,162.05,22,150,51,153.66,48.48s7.61-26.52,13.26-31.4,14-6.24,23-2.92,21.46,6,21.46,9.75S210,32.3,210.22,34.25s.78,23.4-10.34,26.52S186,65.64,179.79,62.91s-13.06-5.65-16.57-5.26S154.05,62.13,158,61s27.5,2.73,30.23,9.17,6.43,14.43,6.24,17.16-2.34,15.6-3.71,19.11-5.26,6.83-12.28,7-9.75-6-13.46-7.41-19.89-15-17.55-20.48,4.88-21.06,2-22.42-.39,25.15-3.9,28.28-2.14,12.67-14.43,10.14-23.79-3.32-26.52-6.24"/></svg>
