--- a/letterd.html
+++ b/letterd.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1 class="light">D</h1>
-    <p class="light">De couleur bleu foncé pâle, couleur du tissus jean</p>
+    <p class="light">#1560bd<br>Le denim est couleur bleu foncé pâle, couleur du tissus jean</p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 186.67 516.28"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:3px;}</style></defs><path class="draw" d="M95,150.6c-6.58,1.31-3.29,27-2.63,37.53S81.2,258.6,81.86,274.41,70.66,501,66.05,507.55s-30.29,9.22-44.12,2,0-100.1-7.25-139.62S8.76,276.38,4.15,245.43s-5.93-143.57,2-183.74S20.61.44,28.51.44,87.67,5.77,91.74,5.09s.68,21,3.05,21S88.69,101,90.38,104s.34,42,2.37,41.34-.67-38.29.68-40.33,8.81-3.39,8.81-14.57,4.41-64.72,4.07-68.79S99.87,21,97.5,20.34,95,9.67,99.65,8.51s6.95,1.82,6,4.64-2.82,4.3-6,2S95.5,6.19,95.5,4.2s33.64-.83,38.11-.83,32.76-.87,34.63,1S178.56,52.93,180,59.55s5.15,52.2,5.52,65.8,1.1,73.89.36,93-23.62,278.57-28.12,291-46.68,4.5-48.37-1.69-2.81-188.43-5.62-214.87-5.63-104.62-4.5-119.8"/></svg>
