--- a/letteru.html
+++ b/letteru.html
@@ -21,7 +21,7 @@
     <div class="main--content">
   <div class="lettre">
     <h1>U</h1>
-    <p>Vert vif fluo. Cette couleur vient de l'imaginaire des extraterrestes.<p>
+    <p>#3cd070<br>Le UFO green est un vert vif fluo. Cette couleur vient de l'imaginaire des extraterrestes.<p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 348.83 131.39"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M7.42,94.08C19.17,82.32,120,56.67,123.73,55.52a161,161,0,0,1,27.42-4.76c9.52-.58,47.47.86,52.81,1.29s17.31,5.63,11.4.15-5.49-18.18-3-18.9,3.89,2.31,4.9,5.34,1.73,9.52-1.3,10.1-17-16-23.37-17.9S178,31,177.84,37.91s5.34,7.8,8.66,7.8a7.18,7.18,0,0,0,7.21-7.07c0-4.48-2-7.22-7.93-8.81s-28.43,15.88-30.16,16.89S140,49.89,141.77,38.78s10.82-8.08,13.56-4.62.19,11.07-7.46,13.4c-28.66,7.65-21-12.74-19.53-10.19s-1.7,12.32-4.25,13.17-2.73-5.94,3.12-16.66S164,18,169.36,16.82C169.36,12,170.58.5,171.79.5s2.73,7.6,1.9,16.3c5.8,0,11.18,0,31.06,9.94s15.73,14.9,15.73,28.36c12.34,1.12,53.28,13.46,88,23S356.75,102.77,343,98.65c-87.72-25.35-275-11.54-302.85-7.21S-7.44,102,3.63,111.16s107.28,15.4,114,15.4,15.88,4.33,41.37,4.33c0,0,40.9-1,52.52-2.67s37.83-4,45.8-4.31S329.68,117.27,342,108"/></svg>  </div>
